--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
     <div class="list-container">
         <div class="title-div">
             <h3>Today's To Do</h3>
+            <span>&#10226;</span>
         </div>
         <div class="input-div">
             <input type="text"placeholder="Add your list" class="input-holder">
