--- a/src/template.html
+++ b/src/template.html
@@ -9,10 +9,11 @@
     <div class="list-container">
         <div class="title-div">
             <h3>Today's To Do</h3>
-            <span>&#10226;</span>
+            <button class="gen-btn">&#10226;</button>
         </div>
         <div class="input-div">
             <input type="text"placeholder="Add your list" class="input-holder">
+            <button class="gen-btn">&#10554;</button>
         </div>
     </div>
     <script src="./index.js"></script>
