Added Add and Remove functionality to code

--- a/src/template.html
+++ b/src/template.html
@@ -12,8 +12,13 @@
             <button class="gen-btn">&#10226;</button>
         </div>
         <div class="input-div">
-            <input type="text"placeholder="Add your list" class="input-holder">
+            <input type="text"placeholder="Add your list" class="input-holder" autofocus>
             <button class="gen-btn">&#10554;</button>
+        </div>
+        <div class="list-main-container">
+            <ul class="li-item-container">
+            </ul>
+            <button class="clear-all-button">Clear all completed</button>
         </div>
     </div>
     <script src="./index.js"></script>
