--- a/src/template.html
+++ b/src/template.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body>
-    <div class="list-container">
-        <div class="title-div">
-            <h3>Today's To Do</h3>
-            <button class="gen-btn">&#10226;</button>
+  </head>
+  <body>
+    <div class="container">
+      <div class="todo-app">
+        <h2>Today's Todo List</h2>
+        <div class="row">
+            <input type="text" id="input-box" placeholder="add your text" autofocus>
+            <button class="add-btn">add</button>
         </div>
-        <div class="input-div">
-            <input type="text"placeholder="Add your list" class="input-holder" autofocus>
-            <button class="gen-btn">&#10554;</button>
-        </div>
-        <div class="list-main-container">
-            <ul class="li-item-container">
-            </ul>
-            <button class="clear-all-button">Clear all completed</button>
-        </div>
+        <ul id="list-container">
+        </ul>
+        <button class="clear-all">Clear All</button>
+      </div>
     </div>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
