--- a/src/template.html
+++ b/src/template.html
@@ -10,11 +10,15 @@
       <div class="todo-app">
         <h2>Today's Todo List</h2>
         <div class="row">
-            <input type="text" id="input-box" placeholder="add your text" autofocus>
-            <button class="add-btn">add</button>
+          <input
+            type="text"
+            id="input-box"
+            placeholder="add your text"
+            autofocus
+          />
+          <button class="add-btn">add</button>
         </div>
-        <ul id="list-container">
-        </ul>
+        <ul class="list-container"></ul>
         <button class="clear-all">Clear All</button>
       </div>
     </div>
